fix css overflow

--- a/Shopping Mall/Css/Common.css
+++ b/Shopping Mall/Css/Common.css
@@ -10,6 +10,7 @@ body
 	font-family: '微軟正黑體', 'Open Sans', sans-serif;
 	font-size: 11pt;
 	color: #000000;
+    background: url(../Picture/bg05.jpg) repeat;
 }
 
 .container
